--- a/7-芸術．美術/71／77-各種の芸術・美術/71／75-各種の美術/72-絵画/721／723-様式別の絵画/721-日本画/721.1／.9-様式別/721.9-明治以後の日本画/721.9-明治以後の日本画.md
+++ b/7-芸術．美術/71／77-各種の芸術・美術/71／75-各種の美術/72-絵画/721／723-様式別の絵画/721-日本画/721.1／.9-様式別/721.9-明治以後の日本画/721.9-明治以後の日本画.md
@@ -8,6 +8,162 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 近代における「日本画」形成の前提：制度移植と「日本」概念の再編
+  - 1.1 明治初期の文化政策と古美術の再評価：博覧会・保存制度（古器旧物保存方〔1871〕、古社寺保存法〔1897〕など）・コレクション形成
+  - 1.2 フェノロサ／岡倉天心らの言説と「東洋／西洋」枠組み：伝統の選別と正典化
+  - 1.3 「日本画／洋画」区分の成立と批判：混交の現実、境界線の政治性
+- 2. 教育機関と専門職の成立：画塾から近代美術学校へ
+  - 2.1 東京美術学校（1887）の創設と教授体系：橋本雅邦らの位置、古典学習と写生の併存
+  - 2.2 画材・技法の標準化と供給：岩絵具・膠・和紙の産業化、表具と保存の前提
+  - 2.3 地方拠点と地域差：京都画壇・地方美術教育、流派意識とネットワーク
+- 3. 官展と画壇の制度化：文展から帝展へ（審査・序列・規範）
+  - 3.1 文展（1907）〜帝展（1919〜）と「日本画」部門：国家的権威と公的評価軸の成立
+  - 3.2 審査制度が様式を方向づける仕組み：会派、受賞、師弟関係とキャリア形成
+  - 3.3 官展への対抗軸：院展・私設展・団体の成立による多元化
+- 4. 日本美術院と革新の系譜：朦朧体以後の方法と評価
+  - 4.1 日本美術院（1898／1914再興）の理念と実務：雑誌・批評圏、古画研究と新様式の両立
+  - 4.2 横山大観・菱田春草・下村観山ら：新表現（朦朧体など）をめぐる賛否と制度の反応
+  - 4.3 伝統参照と同時代性：歴史画・風景・人物表現の再編、題材選択の変化
+- 5. 大正〜昭和前期の拡張：都市文化・市場・メディアが変えた日本画
+  - 5.1 百貨店・画廊・コレクターの拡大：注文制作と流通の変化、価格形成
+  - 5.2 複製・印刷メディア・図案化：大衆化と作品概念（「一点もの」）の揺れ
+  - 5.3 女性画家の可視化と規範：上村松園など、画壇制度と評価語彙の問題
+- 6. 帝国・戦争と日本画：国策・動員・表象の倫理
+  - 6.1 戦争画・記録画の制作体制（1930年代後半〜1945）：従軍、検閲、展覧会とプロパガンダの関係
+  - 6.2 植民地・占領地での文化政策：展覧会・教育・収集がもたらした影響と非対称性
+  - 6.3 戦後の再評価と責任論：作品の所在・公開、作家評価の組み替え
+- 7. 戦後の制度再編：日展・院展と団体美術の構造
+  - 7.1 官展解体後の公募展再編：日展の成立と「日本画」部門の位置づけ
+  - 7.2 団体展（院展・創画会など）と作家の回路：師弟制度、推薦、批評の場
+  - 7.3 文化財保護制度と古画修理の増加：技法理解・材料研究が現代制作へ与えた影響
+- 8. 1950〜70年代：抽象化・前衛化と素材実験（「日本画」の境界問題）
+  - 8.1 東山魁夷らの風景表現と国民的受容：戦後の記憶と美意識の共有／批判
+  - 8.2 技法の拡張：岩絵具・箔・和紙の加工、盛り上げ・コラージュなどによる平面性の再定義
+  - 8.3 現代美術との接触と距離：前衛運動の影響、同時代性の獲得をめぐる議論
+- 9. 1980年代以後：国際化・キュレーション・市場の変化
+  - 9.1 海外展・ビエンナーレでの位置づけ：〈伝統〉表象への期待と交渉、翻訳の問題
+  - 9.2 大学・美術館・公募展の制度変化：学位化、レジデンス、コレクションと展示の語り
+  - 9.3 同時代のテーマ設定：都市／記憶／災害／環境、ジェンダー、ポストコロニアル視点の導入
+- 10. 研究史・批評史としての「明治以後の日本画」：叙述の変遷と現在の課題
+  - 10.1 画壇中心史観から制度史・社会史へ：展覧会史、流通史、資料批判とアーカイブ
+  - 10.2 技法研究と保存科学：顔料分析・修理記録・制作ノートが促す再解釈
+- 10.3 「日本画」概念の有効性／限界：東アジア交流、洋画との往還、メディア横断の整理
 -->
+
+明治以後の日本画の歴史は、単に「伝統的な画材で描かれた絵が続いてきた」という連続史ではなく、近代国家の制度、教育、展覧会、市場、批評が交差するなかで「日本画」という区分自体が形成され、その都度更新されてきた過程として捉えられる。とりわけ近代以降は、作品の内容や技法だけでなく、誰が評価し、どこで展示され、どのように保存され、どの語彙で語られるかが、表現の方向を強く規定してきた。以下では、制度と表現の相互作用を軸に、主要な局面をたどる。
+
+「日本画」という語は、前近代の絵画をそのまま呼び替えたものではなく、近代に「洋画」や「美術」という概念が導入され、制作・教育・展示の制度が再編されるなかで輪郭を持った。したがって、ここで扱うのは素材や技法の固有性だけではない。たとえば墨や岩絵具といった材料が同じでも、掛幅・屏風・襖絵など建築や儀礼と結びついていた制作が、額装や公募展の規格に合わせて「独立した作品」へ移ると、同じ材料でも見え方や評価軸は変わる。日本画史は、表現史であると同時に、作品概念の変遷史でもある。
+
+### 1. 近代における「日本画」形成の前提：制度移植と「日本」概念の再編
+
+明治維新後、日本は西洋の美術概念と制度（美術館、学校、展覧会、批評）を急速に受け入れたが、その受容は単純な模倣ではなく、国家の自己像を組み立て直す作業と結びついていた。神仏分離や廃仏毀釈の影響で寺社の美術が散逸する危機が生じた一方、博覧会への出品や外国人収集家の活動は、国内の古美術を「国の資源」として見直す視点を促した。古器旧物保存方（1871）や古社寺保存法（1897）などの制度は、保存の枠組みを整えると同時に、何を「古典」として残すかを選別する装置でもあった。ここで成立した「保護すべき伝統」は、固定的な過去ではなく、当時の政治的・国際的要請に応じて再編された過去である。
+
+この再編に理論的な後ろ盾を与えたのが、フェノロサや岡倉天心らによる言説である。彼らは日本美術を「東洋」の精神と結びつけて語り、西洋近代に対抗する文化的価値として提示した。だが、その語りは日本の多様な制作実態を均質化し、特定の系譜（たとえば狩野派や琳派、やまと絵など）を正統として強調する傾向ももった。「日本画／洋画」という二分法も、もともと現場の制作が混交的であったことを覆い隠しやすい。近代の日本画は、自己主張としての「日本」概念と、制度化による選別・排除を伴いながら成立した。
+
+こうした枠組みのもとで提示された作品の典型として、横山大観の《無我》（1897）のように、宗教的・精神的主題を近代の「作品」として提示しうる画面へまとめた試みが挙げられる。個々の作品は美的判断の対象であると同時に、「日本画」として何を代表させるかという制度的選択の結果でもあった。
+
+同時に、博覧会や内国勧業博覧会のような展示の場は、作品を「見せる」ことのルールを急速に変えた。輸出工芸とともに絵画が並置される場では、「どの表現が外国に通じるか」「国を代表するイメージは何か」という問いが先立ちやすい。そこでは、宗教的機能や儀礼的用途から切り離された絵画が、国民国家の表象として再解釈され、鑑賞者の想定（国内外の観客）に合わせて語られた。近代の日本画は、制作の現場だけでなく、展示と説明文（解説・批評）の場で形づくられていく。
+
+このとき、「美術」という語が何を指すかも定まっていなかった。工芸や書、建築装飾、宗教的造形をどこまで含めるのか、あるいは西洋的な「絵画・彫刻」を中心に据えるのかという整理は、教育制度や博物館の分類、展覧会の部門編成を通じて具体化される。結果として、近代の日本画は「絵画」という枠に押し込められやすくなり、寺社や建築と結びついた制作の側面（空間の一部としての絵）は、相対的に語られにくくなった。制度の移植は、表現の価値づけの地形そのものを変えた。
+
+### 2. 教育機関と専門職の成立：画塾から近代美術学校へ
+
+近代の日本画は、画塾・家職的な学習から、学校教育と職業としての「画家」へと重心が移るなかで形成されていった。東京美術学校（1887）の創設は、その象徴的な転換点である。橋本雅邦らが担った教育は、古画模写や粉本学習による「正統」継承を重視しつつ、写生や構成の訓練も導入した。ここには、伝統の保存と近代的な訓練体系（カリキュラム化）を両立させる緊張がある。学校は技術を教えるだけでなく、卒業資格や推薦を通じて、作家の序列や評価の入口を作り、画壇の構造を生み出した。
+
+材料と技法の面でも近代化は進む。岩絵具・膠・和紙といった伝統素材は、需要の増加と流通の整備によって供給が安定し、同時に規格化された支持体や表装が普及した。新しい顔料や紙の加工技術も導入され、表現の幅は広がるが、「日本画らしさ」をめぐる規範も強まる。さらに京都を中心とする画壇や地方の教育機関の整備は、中央の制度に接続しつつも、題材選好や筆致の好み、師弟ネットワークの違いを生み、地域差として現れた。近代の日本画は、単一の中心からではなく、教育と流通の回路の複数化によって広がった。
+
+教育の実態を見れば、臨模（名品の模写）と写生は対立というより、相補的な訓練として機能した。臨模は筆法や画面構成、材料の扱いを身体化する手段であり、写生は目の前の対象をどう編集して画面に落とすかを学ぶ場となる。近代の公募展では、画面の「完成度」や「格調」が評価語彙として強く働き、その格調はしばしば古典の参照と結びついた。結果として、学校教育は自由な実験の場であると同時に、「正統」とされる手続きを再生産する場にもなった。
+
+地域差は、単に「地方色」という趣味に還元できない。たとえば京都では、古典的遺産の蓄積（寺社・古画）と観光・産業（工芸・図案）との近接が、装飾性や意匠化への感度を高める条件となり得た。竹内栖鳳のように西洋の動向を観察しつつ写生の語彙を更新した作家もいれば、富岡鉄斎のように文人画的な理想を近代の場で再定位する作家もいた。こうした多様性は、近代日本画が「伝統の継承」だけでなく、複数の伝統像を競合させる場でもあったことを示している。
+
+たとえば竹内栖鳳の《班猫》（1924）は、写生に基づく動物表現の精緻さを示しつつ、画面の構成や余白の扱いに日本画の語彙を残し、近代における「写生」と「様式」の折衷の一例として読まれてきた。
+
+材料の「伝統」もまた固定的ではない。明治以後、顔料や膠、紙・絹の流通が変わり、化学顔料や工業製品が制作に入り込むと、発色や耐久性、変色のリスクも変わる。表具や保存修理の現場で蓄積された知見は、作品が時間のなかでどう変化するかを可視化し、「この材料が日本画らしい」という素朴な同一視を揺さぶった。近代以後の日本画は、古典の材料を守るだけでなく、近代的な供給と管理の条件のなかで材料を選び直してきた。
+
+### 3. 官展と画壇の制度化：文展から帝展へ（審査・序列・規範）
+
+文展（1907）に始まる官設の公募展は、日本画の歴史を「作品の変遷」以上に「評価制度の変遷」として特徴づけた。審査を通過し、入選・受賞することが社会的信用と市場価値を生み、作家の生活を支える。結果として、審査員の美意識や時代の公的価値観が、構図、主題、技法の選択を方向づけた。ここでは、保守／革新という単純な対立よりも、「制度に適合する革新」が選好される構造が重要である。新奇さは評価されうるが、理解可能で、かつ公的空間に置ける範囲にとどまることが求められやすい。
+
+帝展（1919〜）への移行後、官展はより強い権威と序列を帯び、会派・師弟関係・推薦の仕組みが固まっていく。画壇の中心が制度に集約される一方で、その外側には対抗軸も形成された。日本美術院の院展や、私設展覧会、団体の活動は、官展の規範から距離をとり、別の評価語彙を育てる場となった。ただし「対抗」であっても制度と無縁ではなく、むしろ制度の存在が外部の形成を促す。近代日本画の多元性は、制度が作り出した中心と周縁の相互依存として理解できる。
+
+官展が生んだ影響は、作家の生活史にとどまらない。規格化された画面サイズや展示形式、審査で有利になりやすい主題の選好は、作品の見た目を均質化しやすい。人物や歴史、四季の風景といった題材は「高尚」さを担保しやすく、宗教画や戯画的表現、異端的な素材実験は周縁に追いやられがちだった。一方で、制度の中心に近い作家ほど、官展の規範を利用しつつ画面の大作化や構成の洗練を進め、結果として「標準」を更新することもあった。制度は抑圧であると同時に、競争の場として技術を加速させる側面も持つ。
+
+この加速は、批評とメディアによっても支えられた。公募展の評判は新聞や雑誌の評で増幅され、評価語彙（格調、品位、写生、装飾性、民族性など）が反復されることで「何が日本画として正しいか」が半ば常識化する。批評は制度への監視にもなり得るが、同時に制度の価値判断を言語化し、共有する装置でもある。近代日本画の「正統」は、審査員だけでなく、批評の語彙が繰り返し再生産することで安定した。
+
+### 4. 日本美術院と革新の系譜：朦朧体以後の方法と評価
+
+日本美術院（1898／1914再興）は、伝統の再解釈と新表現の試行を組み合わせる点で、近代日本画の方向性を大きく左右した。古画研究によって「参照すべき過去」を学術的に整えつつ、同時代の視覚経験に応じた表現を模索する。横山大観・菱田春草・下村観山らが試みた新様式（朦朧体など）は、輪郭線の明確さを相対化し、色面や光の効果で空気感を表そうとした点で、従来の規範を揺さぶった。一方でそれは、西洋の写実や印象主義の影響と結びつけて賛否を呼び、批評の場で「日本画とは何か」という問いを先鋭化させた。
+
+菱田春草の《落葉》（1909）のような作品は、輪郭の明示よりも色のにじみや層で季節感と空気を立ち上げ、当時の「新しさ」が筆法だけでなく、画面の光学的な効果として理解されていたことを示す。
+
+この局面で注目すべきは、革新がしばしば「伝統回帰」と並走することである。新表現の正当化には、やまと絵や水墨、琳派といった参照枠の再設定が用いられ、過去は単に戻る場所ではなく、現在の実験を支える資源として組み替えられた。また、題材の選択（歴史、風景、人物、宗教的主題）も、国民国家の自己像や近代の鑑賞者の趣味と結びつき、表現の自由を広げると同時に、ある種の「格調」を要求する圧力にもなった。日本美術院の革新は、制度に抵抗しつつ制度的評価とも交渉する、近代日本画の典型的な運動として位置づけられる。
+
+たとえば横山大観の長巻《生々流転》（1923）は、伝統的な形式（巻物）を参照しながら、近代の展覧会空間で「大作」として提示されることで、時間表現と鑑賞体験を再構成した例といえる。ここでは、形式が古いから伝統で、形式が新しいから近代という単純な区分は成り立たない。古い形式は、新しい場（展覧会・美術館）に置かれたとき、別の意味を帯びる。日本美術院の周辺で生じた革新は、材料や技法の問題である以前に、作品を成立させる場と観客の再編と結びついていた。
+
+岡倉天心の英語著作『The Ideals of the East』（1903）や『The Book of Tea』（1906）などは、日本画の制度形成と並行して「日本（東洋）の美」の像を国際的に流通させた。そこでは、東洋の精神性や継続性が強調され、近代化のなかで失われるものへの危機感が語られるが、その語りは同時に、何を本質として守るべきかを規定する規範としても作用し得る。近代日本画の革新は、国内制度との交渉だけでなく、国際的な視線に対して自らを説明する言語を持つこととも結びついていた。
+
+### 5. 大正〜昭和前期の拡張：都市文化・市場・メディアが変えた日本画
+
+大正期から昭和前期にかけて、日本画は都市文化の発展と美術市場の拡大のなかで、制作と流通の条件を大きく変える。百貨店の美術催事や画廊の活動、新聞・雑誌による紹介は、作品を専門家だけでなく一般の消費者へと接続した。これにより、注文制作や贈答需要、室内装飾としての需要が増え、画家は官展・団体展だけでなく市場の嗜好にも応答するようになる。市場の拡大は作家の自立を促すが、同時に「売れる」主題や画風の反復を生み、評価の語彙が美術的価値と商業的価値の間で揺れる。
+
+複製技術と印刷メディアの普及も重要である。図版やポスター、挿絵的な応用は、日本画の図様を広く流通させ、図案化を促したが、「一点もの」のオリジナリティ概念を相対化もした。さらにジェンダーの問題として、上村松園のように高い評価を得た女性画家が現れる一方、画壇の制度や批評語彙は長らく男性中心で、女性作家は題材や役割の期待（美人画、家庭性、品位など）に拘束されやすかった。女子美術学校（1900）など教育機会が整っても、審査や推薦、ネットワークの非対称性が残り、可視化と規範化が同時に進むという矛盾を抱えた。
+
+都市文化の成熟は、日本画の「見せ方」をより演出化していく。川端龍子が主宰した青龍社（1928）の活動は、その象徴の一つである。巨大な画面、強い遠近や動勢、劇的な主題は、床の間で静かに鑑賞される想定ではなく、展覧会で多数の観客に瞬時に届く視覚効果を狙った。これは日本画の近代化を促す一方、作品がスペクタクル化し、表現が制度と市場の要求に合わせて増幅される危うさも伴う。大正〜昭和前期の日本画は、静謐な抒情と劇場的な視覚が併存し、どちらも「近代の観客」を前提としていた。
+
+この時期のジェンダーをめぐる評価の問題は、個々の才能の有無ではなく、評価語彙の偏りとして現れる。上村松園の《序の舞》（1936）のように高い完成度を持つ作品が公的に顕彰されても、そこで称揚される「品位」や「貞淑」といった語彙が、女性作家に特定の主題や態度を求める規範として働きうる。男性作家も規範から自由ではないが、女性作家の場合、作品内容がしばしば作家の人格像と結びつけて語られやすく、評価の自由度を狭める。近代日本画の「多様化」は、こうした規範が残る範囲で進んだ面がある。
+
+上村松園の画業を具体的に見れば、初期の《人生の花》（1899）から、《焰》（1918）、《母子》（1934）、《序の舞》（1936）、《砧》（1938）、晩年の《初夏の夕》（1949）に至るまで、人物表現の完成度が高く評価された一方で、その評価が「理想化された女性像」の語彙と結びつきやすかったことも読み取れる。
+
+### 6. 帝国・戦争と日本画：国策・動員・表象の倫理
+
+1930年代後半から1945年にかけて、戦争は日本画を含む美術界に強い動員圧力を加えた。戦争画・記録画の制作は、国家や軍の要請、検閲、展覧会の枠組みと結びつき、作家は表現者であると同時に公的な記録・宣伝の担い手として位置づけられた。ここでは、作品が「美術」として評価されることと、政治的機能を担うことが重なり、倫理的な問題が避けがたく生じる。個々の作家の内心や選択の自由度は一様ではないが、制度と社会状況が選択肢を狭め、表象の枠を規定したことは確かである。
+
+帝国の拡張と植民地・占領地での文化政策も、見過ごしにくい背景である。展覧会や教育、収集は「文化の普及」や「共栄」の名目で行われたが、実際には権力関係が非対称で、何を中心とし何を周縁に置くかの序列を再生産しやすかった。日本画の題材においても、外地の風景や人物が「異国趣味」や統治の視線を帯びて描かれることがあり、表現は政治から独立していない。戦後、この時期の作品や作家をどう評価するかは、表現史の問題であると同時に、責任や記憶の問題として、長く議論の対象となってきた。
+
+戦後の議論が難しいのは、評価の対象が作品の造形だけでなく、制作の条件（依頼、検閲、報酬、所属）や、展示のされ方（公開の可否、所在、資料化）に及ぶからである。ある作品が優れた筆致や構成を持つことと、その作品が担った政治的機能をどう位置づけるかは、同じ尺度で測りにくい。日本画史の叙述は、時に美術的価値の言語だけで完結しようとするが、戦争期については、その言語だけでは問題を覆い隠す危険がある。ここで求められるのは、断罪や免罪の単純化ではなく、制度と表象が結びついた具体的な経路をたどることだろう。
+
+### 7. 戦後の制度再編：日展・院展と団体美術の構造
+
+戦後、日本の美術制度は占領期の改革と社会の再編のなかで再出発し、官展中心の仕組みも形を変えた。公募展は日展（日本美術展覧会）として再編され、「日本画」部門は一定の継続性を保ちながらも、審査や運営の透明性、派閥性といった問題を繰り返し抱えることになる。日本美術院の院展も存続し、団体ごとの評価回路が確立されると、作家は所属団体、師弟関係、推薦制度、批評の場を通じてキャリアを形成する。これは多元化をもたらす一方、制度が多重化することで別種の閉鎖性が生まれる場合もあった。
+
+同時期に、文化財保護法（1950）が制定され、古画の保存修理が制度的に進む。修理は過去の作品を守る実務であるだけでなく、材料や技法の理解を深め、現代の制作にも影響を与える。たとえば、古典の下地や彩色工程、箔の扱い、表装との関係が具体的な知として共有されると、「伝統」の理解は観念から技術へと重心を移す。戦後の日本画は、制度再編による評価構造の再固定化と、保存・研究の深化による技術認識の更新が同時に進む局面にあった。
+
+加えて、戦後は各地に公立美術館が整備され、地域のコレクションと展示が「中央の画壇」だけではない評価を担うようになる。美術館は、団体展の外にある表現を掬い上げる可能性を持つ一方、収集方針や展示の語りが新たな「正史」を作りうる場でもある。戦後の日本画は、公募展と団体展の回路に、学芸員の研究と企画展という回路が重なり、評価の権力が分散していった。その分散は自由度を広げるが、同時に「どの語りが標準になるか」をめぐる競合も生む。
+
+また、団体展の内部に留まらない動きとして、既存の審査や会派の論理に距離を置くグループの形成も続いた。創画会のように、作家自身が運営と批評の場を組み立て直す試みは、制度の外部を作るだけでなく、「日本画」部門の内部に別の規範を持ち込む。もっとも、外部の運動も市場や美術館、教育制度と接続することで新たな中心を作りうる。戦後の制度再編は、中心の交代ではなく、複数の中心が並立し、相互に批判し合う状態を長くもたらした。
+
+### 8. 1950〜70年代：抽象化・前衛化と素材実験（「日本画」の境界問題）
+
+1950〜70年代の日本画は、戦後社会の記憶と価値観の変化、そして現代美術の潮流のなかで、表現の境界を問い直した。東山魁夷に代表される風景表現は、戦後の喪失感や再生の感情と共鳴し、国民的な支持を得た一方で、癒しや抒情の語彙に回収される危険も指摘される。つまり「普遍的」とされる美意識は、しばしば特定の社会感情や制度的承認によって作られている。
+
+たとえば東山魁夷の《残照》（1947）や《道》（1950）は、戦後の感情構造と結びつきながら「風景」を公共的な記憶の器として提示し得た例として、しばしば参照される。
+
+他方で、抽象化や前衛化の試みは、材料・支持体・画面構造の問いへと向かった。岩絵具や箔、和紙の加工、盛り上げ、削り、コラージュ的手法は、伝統素材を保ちながら平面性の定義を変え、「描く」行為そのものを再編する。こうした実験は、現代美術の運動と接触しつつも、展覧会制度や「日本画」部門という枠から完全には自由になれないことが多い。境界の拡張は、枠を壊すだけでなく、枠の中で何が許容されるかを交渉する実践として現れた。
+
+ここでの「日本画らしさ」は、しばしば材料の選択に回収されるが、実際には視覚経験の更新が大きい。テレビや写真、広告の普及は、切り取りや反復、平面上の記号化といった感覚を一般化し、絵画もそれに応答する。杉山寧のように装飾性と構造を重ねる試みや、加山又造のように古典技法への参照と大胆な形態化を併走させる試みは、「伝統素材＝保守」という短絡を崩した。同時に、抽象化が評価される場と、具象・抒情が支持される場が並存し、複数の「同時代性」が競合する状態が続いた。
+
+杉山寧の《穹》（1964）は、動物や自然形の参照を残しつつ、画面全体を構造化していく志向を示し、日本画における「抽象化」を具体的な画面の組織として捉える手がかりにもなった。
+
+### 9. 1980年代以後：国際化・キュレーション・市場の変化
+
+1980年代以後、日本画は国際展や海外の美術館展示の増加とともに、翻訳の問題に直面する。海外の場では「伝統」「東洋」「手仕事」といった期待が先行しやすく、作家やキュレーターは、その期待に応答しつつ、同時代性をどのように提示するかを調整する必要がある。これは単なる広報ではなく、作品の読み方を規定する枠組み（キュレーション）の問題であり、何を「日本画」として見せるかが、国内外で異なる論理に左右される。
+
+制度面では、大学・大学院での専門教育の整備、学位化、レジデンスや助成制度の拡充が、制作の条件を変えた。公募展や団体展に加えて、美術館のコレクション形成と企画展が評価回路として重要性を増し、資料の整備やアーカイブ化が進む。市場も、バブル期の過熱やその後の再編を経て、国内の需要だけでは説明できない動きを示す。国際化は機会を広げるが、同時に「らしさ」の固定化や、特定の表象（風景、装飾性、素材感）への偏りを強める場合もある。
+
+国際化の局面では、用語の翻訳自体が論点になる。「Nihonga」という呼称は便利だが、その便利さは「日本画は一つの様式である」という誤解を招きやすい。実際には、同じ素材を用いながら現代美術の語彙で制作する作家もいれば、逆に油彩やアクリルを使いつつ「日本画的」構成を採る作家もいる。素材と制度のどちらを基準にするかで分類は揺れ、展示の文脈（国別展示、テーマ展示、メディア別展示）によって意味が変わる。国際化は、表現の多様化を促す一方で、分類語彙の固定化と再編を同時に引き起こす。
+
+「国民的」と呼ばれた画家の評価も、海外展示や美術館のコレクション形成のなかで再配置される。東山魁夷の《緑響く》（1982）のような作品が示す抒情的な風景は、日本国内では共有感情の器として受容されやすいが、国際的な場では「日本的なるもの」の記号として読まれる危険も含む。
+
+同時代のテーマ設定も変化した。都市の更新や記憶、環境、災害といった主題は、写生的な自然観だけでなく、資料写真の参照やアーカイブ的手法、インスタレーションとの併置など、多様な形式で扱われる。とくに1995年の阪神・淡路大震災や2011年の東日本大震災以後、喪失や復興をめぐる表象は、美術館展示や地域プロジェクトとも結びつき、「美しい風景」として回収されることへの批判的意識も強まった。日本画が社会的現実に触れる仕方は、抒情の反復だけでは説明できなくなっている。
+
+### 10. 研究史・批評史としての「明治以後の日本画」：叙述の変遷と現在の課題
+
+明治以後の日本画をめぐる研究と批評の歴史は、長らく画壇中心史観—主要作家と会派の系譜—に依拠してきたが、近年は制度史・社会史へと重心が移っている。展覧会史の精査、売買記録や百貨店催事の資料、雑誌・新聞の批評、教育機関のカリキュラムや人事などを追うことで、作品の価値がどのように作られ、分配されてきたかが可視化される。こうした視点は、従来の「名作」中心の物語では取りこぼされがちだった地域差、女性作家の位置、周縁的ジャンル、制作労働の条件に光を当てる。
+
+技法研究と保存科学の進展も叙述を変える。顔料分析や修理記録、制作ノートの検討は、見た目の様式分類だけでは捉えられない選択（材料調達、下地処理、重ねの手順、変色や修理の痕跡）を明らかにし、「伝統」の実態を具体化する。さらに、東アジアの交流史や、洋画との往還、写真・印刷・デザインなど隣接メディアとの関係を含めて整理すると、「日本画」という概念は便利である一方、実態を二分法に押し込める限界も露わになる。現在の課題は、概念を否定することではなく、その歴史的生成と制度的機能を自覚しつつ、多様な実践を過不足なく記述できる枠組みを更新することにある。
+
+その更新には、資料へのアクセス環境も影響する。展覧会目録、作家の書簡、画材店の記録、修理報告、写真資料が整理され、データベース化されると、従来の回顧録や画壇史の枠組みで見えにくかった関係が浮かび上がる。どの作家がどの展覧会にどの頻度で出品したのか、どの地域の画家がどの回路で中央に接続したのかといった問いは、量的な把握と結びつくことで具体性を持つ。批評史においても、「日本画は伝統か近代か」という二項対立を繰り返すのではなく、いつ、誰が、どの場で、どの語彙を用いて価値づけたのかを検証することが、叙述の精度を上げる道になる。
+
+さらに近年は、帝国史・移民史・ジェンダー史と接続した問いが、「日本画」という語の射程を問い直している。誰の経験が「日本」の名で代表され、誰が周縁化されてきたのか。外地での制作、コレクションの来歴、展示の枠組みが再検討されると、日本画史は国内の会派史では完結しないことが明確になる。こうした視点は、伝統の価値を否定するためではなく、価値が作られた条件を可視化し、複数の語りが併存できる形へ叙述を開くために必要になる。
+
+その一方で、社会史的な説明だけでは、作品が画面として成立している具体性（線、にじみ、粒子感、余白、支持体の張り）をすくい取りにくい。日本画史の記述は、制度や言説と、画面の手触りに根ざした形式分析の往復運動として組み立て直される必要がある。制度の歴史と作品の歴史を切り離さずに語ることが、明治以後の日本画を「単一の伝統」でも「単なる制度の産物」でもないものとして捉える前提になる。
