--- a/9-文学/91／99-各言語の文学/91-日本文学/913-小説．物語/913.6-近代：明治以後/913.6-近代：明治以後.md
+++ b/9-文学/91／99-各言語の文学/91-日本文学/913-小説．物語/913.6-近代：明治以後/913.6-近代：明治以後.md
@@ -8,6 +8,188 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 射程と前提：明治以後の「小説」が近代化する条件
+  - 1.1 江戸後期の読本・人情本・滑稽本などからの連続／断絶（「小説」概念の再編）
+  - 1.2 言文一致と写実：話し言葉・内面・時間意識が表現の中核になるまで
+  - 1.3 翻訳・翻案の役割：西洋小説の導入が規範（リアリズム等）を変えたこと
+  - 1.4 新聞・雑誌・単行本の市場：連載と編集が作品形式・読者層を規定したこと
+  - 1.5 「純文学／大衆文学」や文壇の成立が価値基準を作ったこと
+- 2. 明治前期〜1890年代：近代小説の出発点と「小説論」の誕生
+  - 2.1 坪内逍遥『小説神髄』（1885〜86年）：写実と心理描写をめぐる規範提示
+  - 2.2 二葉亭四迷『浮雲』（1887〜89年）：近代的語り口と人物造形の試行
+  - 2.3 森鷗外『舞姫』（1890年）：翻訳経験と近代的自我の主題化
+  - 2.4 『文学界』（1893〜98年）など文芸雑誌の形成：批評と言説の共同体
+  - 2.5 出版規制・検閲と自己検閲：表現の自由が制度的に揺れた環境
+- 3. 1900年代〜1910年代：写実の成熟と知識人小説の定着
+  - 3.1 夏目漱石『吾輩は猫である』（1905〜06年）〜『こころ』（1914年）：近代的主体と社会の接点
+  - 3.2 鷗外の小説世界の拡張（例：『青年』1910〜11年）と歴史叙述の試み
+  - 3.3 「教養」「東京」「学校」「官僚制」など近代制度が主題と舞台になる過程
+  - 3.4 文学論争・批評語彙の整備：作品評価の枠組みが共有されていくこと
+- 4. 自然主義から私小説へ：事実性と内面の規範化（1900年代後半〜）
+  - 4.1 島崎藤村『破戒』（1906年）：社会問題と告白の形式
+  - 4.2 田山花袋『蒲団』（1907年）：自己暴露と「私小説」的感覚の定着
+  - 4.3 「真実」志向の効用と限界：創作の自由／倫理／読者期待の葛藤
+  - 4.4 白樺派と個人主義：志賀直哉『暗夜行路』（1921〜37年）の位置づけ
+  - 4.5 女性作家の可視化と周縁化の併存：樋口一葉（1890年代）からの問題提起
+- 5. 大正〜昭和初期：モダニズム・都市文化・通俗小説の拡大
+  - 5.1 芥川龍之介（例：『羅生門』1915年）にみる短編技法と知的反省
+  - 5.2 谷崎潤一郎『痴人の愛』（1924〜25年）：欲望・近代都市・大衆文化の接続
+  - 5.3 川端康成『伊豆の踊子』（1926年）と新感覚派：感覚・断片・映像性
+  - 5.4 探偵小説・怪奇・ユーモア（例：江戸川乱歩）と娯楽市場の成熟
+  - 5.5 映画・広告・雑誌の相互作用：読者の嗜好と「流行」を生む回路
+- 6. プロレタリア文学と戦時体制：政治と表現のせめぎ合い（1920年代〜45年）
+  - 6.1 小林多喜二『蟹工船』（1929年）など：階級・労働をめぐる主題化
+  - 6.2 1925年治安維持法と弾圧、転向：運動の衰退と作家の選択
+  - 6.3 戦時統制下の出版・言論：国策と文芸の関係（協力／抵抗の単純化を避ける）
+  - 6.4 戦争体験の語りの条件：検閲・自己検閲・読者の受容の問題
+  - 6.5 戦後の再評価：責任論と作品価値をどう切り分けて論じるか
+- 7. 敗戦〜1950年代：「戦後文学」の出発と占領期の制度
+  - 7.1 太宰治『斜陽』（1947年）・『人間失格』（1948年）：倫理と虚無の表象
+  - 7.2 大岡昇平『野火』（1951年）・野間宏『真空地帯』（1952年）：戦争の記憶と社会
+  - 7.3 占領期の検閲と表現：民主化の言説と統制の併存
+  - 7.4 文学雑誌・同人誌・出版社の再編：文壇の再構築と新人発掘
+  - 7.5 被爆・引揚・生活復興の語り：テーマの拡張と記憶の政治性
+- 8. 1960〜70年代：純文学の制度化と実験的手法の広がり
+  - 8.1 安部公房『砂の女』（1962年）：不条理・寓意・都市化の感覚
+  - 8.2 大江健三郎『個人的な体験』（1964年）：政治と私的経験の結合
+  - 8.3 遠藤周作『沈黙』（1966年）：宗教・歴史・翻訳文化の交点
+  - 8.4 三島由紀夫『金閣寺』（1956年）に象徴される美学と政治の緊張
+  - 8.5 文芸賞（芥川賞・直木賞ほか）と出版戦略：評価装置としての機能
+  - 8.6 テレビ等マスメディアの影響：作家像・読書習慣・ベストセラーの構造
+- 9. 1980〜90年代：ポストモダン化とジャンル横断、社会的事件の影
+  - 9.1 村上春樹『ノルウェイの森』（1987年）など：大衆的読者と世界流通の回路
+  - 9.2 吉本ばなな『キッチン』（1988年）：日常感覚と消費社会の感性
+  - 9.3 ミステリ等の躍進（例：宮部みゆき『火車』1992年）：娯楽と社会批評の両立
+  - 9.4 1995年（阪神・淡路大震災／オウム真理教事件）以後の倫理・共同体の問い
+  - 9.5 「純文学／大衆文学」境界の揺らぎと批評の再編（メディア論・カルチュラル・スタディーズ等）
+- 10. 2000年代以後：デジタル化・グローバル化と読書環境の再構成
+  - 10.1 携帯小説（2000年代）〜Web小説（例：小説投稿サイト、2004年以降の拡大）の登場
+  - 10.2 電子書籍・オーディオブック・SNS：流通と口コミが作品形成に介入する度合い
+  - 10.3 書店減少と出版構造の変化：文庫・単行本・雑誌の役割の再配置
+  - 10.4 翻訳と国際的評価：海外出版・受賞・映像化が「日本小説像」を形づくること
+- 10.5 分野史叙述の論点：カノン形成、編集者・雑誌アーカイブ、統計・計量研究の活用と限界
 -->
+
+### 1. 射程と前提：明治以後の「小説」が近代化する条件
+
+明治以後の日本の小説史は、作品の内容の変化だけでなく、小説という形式が「何をするものか」という期待の変化として捉えると輪郭が見えやすい。江戸後期には読本・人情本・滑稽本など、都市の読書市場に支えられた物語類がすでに豊かな生産体系を持っていたが、明治期に入ると、近代国家の制度（学校教育、新聞・雑誌の公共圏、法制度）と結びつきながら、「文学」としての小説が改めて位置づけられていく。ここでは、娯楽としての読みから、教養・批評・芸術という価値づけへと、読者の側の期待も同時に組み替えられた。
+
+表現の技術面で中心となったのが言文一致である。話し言葉に近い文体は、人物の内面、会話のテンポ、時間の流れを扱いやすくし、近代的な心理描写や視点操作の土台になった。一方で、言文一致は単なる「口語化」ではなく、書き言葉の伝統と新しい規範の折衷でもあったため、作品ごとに文体の設計が争点になり、批評の語彙（写実、心理、構成、象徴など）も整備されていく。
+
+この近代化を押し進めたのが翻訳と翻案である。西洋小説の移入は、筋立て、人物造形、語りの位置、描写の細部といった技法の参照枠を変え、リアリズムや自然主義といった「書き方の規範」を導入した。ただし受容は一方向ではなく、既存の物語類や漢文訓読の文体感覚、講談・落語など口承の語りも混ざり合い、日本語の表現資源として再編成されていく。
+
+さらに重要なのは、市場と制度が作品形式を規定したことだ。新聞連載や雑誌発表は、章立て、引き、登場人物の配置に影響し、編集者や掲載媒体のカラーが作品の位置づけを左右した。のちに「純文学／大衆文学」といった区分が強まると、文壇、文芸誌、文芸賞が評価装置として働き、作家のキャリア形成と読者の期待を結びつける回路になった。小説史は作品だけでなく、それを成立させる環境の歴史でもある。
+
+学校教育が小説の地位を押し上げた点も大きい。近代の国語教育は、読み書きの標準化とともに「名作」の選別を進め、作品は教室で読まれることで「共通の古典」へと変わる。教科書や全集、文庫の編纂は、作品を時代順に並べ、作家を系譜として語る枠組みを作り、分野史叙述の基盤にもなった。他方で、この選別は、地方の文芸、女性や少数者の書き手、大衆的ジャンルの作品を周縁へ追いやりやすい。何が「近代小説の中心」と見なされるかは、作品の内在的価値だけでなく、教育・出版・批評の制度が作る可視性の問題として理解する必要がある。
+
+### 2. 明治前期〜1890年代：近代小説の出発点と「小説論」の誕生
+
+明治前期は、小説が「文明開化」の知識や道徳を担う媒体としても期待される一方、旧来の戯作的語りと新しい写実志向がせめぎ合った時期である。坪内逍遥『小説神髄』（1885〜86年）は、小説を芸術として確立しようとする規範提示として大きく、筋の奇抜さよりも人物の心理と日常のリアリティを重んじる方向を打ち出した。小説をめぐる議論が「面白い／つまらない」から「写実／理想」「心理／道徳」といった概念へ移る契機にもなった。
+
+二葉亭四迷『浮雲』（1887〜89年）は、言文一致の試行とともに、近代的な屈折を抱えた人物像を描き、近代小説の出発点として繰り返し参照されてきた。森鷗外『舞姫』（1890年）は、留学経験や翻訳活動と結びつきながら、近代的自我と制度の衝突を物語化し、同時代の知識人が抱えた葛藤を象徴的に示した。ここで小説は、国家・社会の変化を背景に、個人の選択と責任を問う形式として立ち上がる。
+
+また、尾崎紅葉や幸田露伴の作品群は、近代化の途上にある日本語がどのように「文学的文章」を作るかという問題に、別の解を与えた。紅葉は雅俗折衷の修辞と都市風俗の観察を結びつけ、露伴は漢文的語彙や格調を取り込みながら、物語の構築力を示した（『五重塔』1891年など）。ここには、口語的な写実へ一直線に進むのではなく、複数の文体資源を動員して近代小説を形作る過程が見える。後に「古い」と見なされる文体も、当時は選択肢の一つとして競合し、近代小説の語り口を豊かにした。
+
+同時期には、尾崎紅葉『金色夜叉』（1897年以降の連載で知られる）のような通俗的読物が大きな読者層を獲得し、文学的評価とは別に市場の中心を形成した。近代小説の歴史は、早くから「芸術」と「娯楽」の二重構造を抱えていたのであり、その境界をどう引くかが後の文壇形成、ジャンル分化、批評の制度化に影響した。
+
+この二重構造は、後に出版社が雑誌や叢書を使って読者層を分節する基礎にもなる。いわゆる「文芸」の名で売られる作品でも、連載媒体、挿絵、広告の作り方は大衆読物と連続しており、純粋な「文学市場」と「娯楽市場」が最初から分離していたわけではない。近代小説の成立は、作品の歴史であると同時に、区分が作られていく歴史でもある。
+
+『文学界』（1893〜98年）に代表される文芸雑誌の場は、作家と批評家が同じ言葉で同時代を語る共同体を作った。作品が発表とほぼ同時に批評され、論争が生まれ、次の作品の「読み方」まで先取りして提示される。この回路は、のちの文芸誌中心の文壇モデルの原型となる。一方で、出版規制や検閲も存在し、表現の自由は制度的に安定していたわけではない。作品の成立条件には、常に制度との距離の取り方が含まれていた。
+
+### 3. 1900年代〜1910年代：写実の成熟と知識人小説の定着
+
+20世紀初頭、小説は教育を受けた読者層の拡大と、新聞・雑誌の安定した供給に支えられ、社会を観察し、個人の内面を分析する形式として成熟していく。夏目漱石は『吾輩は猫である』（1905〜06年）で語りの装置を前景化しつつ、近代知識人の自意識をユーモラスに描き、続く『三四郎』（1908年）『それから』（1909年）『門』（1910年）や『こころ』（1914年）で、近代的主体が社会規範と衝突する構図を多様な角度から提示した。ここで重要なのは、作品が「近代人の心」を語る際に、語り手や視点の設計が不可欠な技術として意識され始めたことである。
+
+同時に、作家が新聞社や出版社との関係の中で「職業」として成立していく面も見逃せない。連載は締切と分量の制約を伴い、章末の引きや反復の配置といった技法が、物語の設計に組み込まれていく。批評は作品の価値づけだけでなく、読者が連載を追うための「読み方」を提供し、作家はその期待を受けて次作を書き、また批評される。この循環が、小説を同時代的な言説として加速させた。
+
+森鷗外もまた、翻訳・批評・歴史叙述を横断しながら、小説の射程を拡張した。たとえば『青年』（1910〜11年）は知識人の形成過程を描き、のちの歴史小説群は史実と創作の境界を問い直す場にもなった。近代小説は、同時代の社会を写すだけでなく、過去の語り方そのものを更新することで、自らの「歴史性」を取り込んでいく。
+
+この時期、東京という都市、学校制度、官僚制、職業、恋愛と結婚の規範など、近代制度が主題と舞台として繰り返し描かれる。小説は「社会の縮図」であると同時に、制度の中で生きる主体がどのように自分を語るかという、自己記述の訓練にもなった。読者は作品を通じて自分の経験を言語化する枠組みを学び、批評はその枠組みを公共の言葉として整えていく。
+
+また、作品評価をめぐる論争が増え、写実・理想・芸術性・道徳性といった基準が、作品外部の言説としても蓄積されていく。小説史は、作品の連鎖だけでなく、「何がよい小説か」をめぐる基準が更新される歴史として進行した。
+
+### 4. 自然主義から私小説へ：事実性と内面の規範化（1900年代後半〜）
+
+1900年代後半から、自然主義は「現実」を扱う態度として影響力を持ち、作家の経験と作品の関係が前面化する。島崎藤村『破戒』（1906年）は、差別と告白をめぐる主題を通じて、社会問題が個人の内面に刻む傷を描き、写実が倫理や政治と無縁ではないことを示した。田山花袋『蒲団』（1907年）は、欲望と自省を露骨に描写し、作者と作品の距離を狭める語りのスタイルを広めた。
+
+この流れは、のちに私小説として総称される領域へつながる。私小説は単に「私生活の暴露」ではなく、経験の事実性を担保にして、自己の矛盾や弱さをどこまで言語化できるかを競う形式として理解できる。一方で、事実性が規範化すると、創作の自由が狭まる危険も生まれる。作家の生活が読者の好奇心の対象になり、作品の価値がスキャンダル性や「本当らしさ」で測られる局面もあった。真実志向は、表現の誠実さを支える一方、倫理・プライバシー・読者期待の葛藤を恒常的に孕む。
+
+この硬直化に対しては、私小説の方法を相対化しようとする批判も繰り返し現れた。短編の構成や象徴性を重視する立場、社会や歴史の視点を強める立場、あるいは「心境小説」と呼ばれるような、自己告白を単なる事実の提示ではなく内面の変化のドラマとして精緻化する立場が並立する。私小説は中心に位置づけられつつも、常に反発と変形を伴ってきた点で、分野の動力でもあった。
+
+白樺派の個人主義は、自然主義とは異なる仕方で「個人」を中心に据え、志賀直哉『暗夜行路』（1921〜37年）に代表されるように、内面の精密な観察を一つの到達点として提示した。ここでは、派手な事件よりも生活と感情の微細な変化が重視され、小説の価値が「感覚の正確さ」や「文章の密度」によって語られる。
+
+同時に、女性作家の可視化と周縁化が併存したことも、この時期以後の構造として残る。樋口一葉（1890年代）は都市下層の生活や女性の境遇を繊細に描き、近代小説のカノン形成に組み込まれつつも、女性の書き手が制度の中心に位置づけられるまでには長い時間を要した。誰が「代表」とされるかは、作品価値だけでなく、出版・批評・教育の選別と深く結びついている。
+
+### 5. 大正〜昭和初期：モダニズム・都市文化・通俗小説の拡大
+
+大正期から昭和初期にかけて、都市文化の加速とメディア環境の変化は、小説の主題と技法を大きく揺さぶった。芥川龍之介は『羅生門』（1915年）などで古典や説話を素材にしつつ、短編の凝縮した構成と知的反省を結びつけ、近代小説が「伝統」をどう再利用するかのモデルを示した。ここでは、過去をそのまま再現するのではなく、語り直しによって現代の不安や倫理を照らす方法が洗練される。
+
+谷崎潤一郎『痴人の愛』（1924〜25年）は、欲望と自己演出、近代都市の消費文化を絡め取り、作品が読者の欲望そのものを扱う回路になり得ることを示した。川端康成『伊豆の踊子』（1926年）や横光利一ら新感覚派は、感覚の断片、映像的な描写、都市の速度感を重視し、写実を単なる再現ではなく、知覚の形式として更新する。モダニズムは、近代化の進展がもたらす身体感覚の変化を、小説の文体と構成に持ち込んだ。
+
+一方で、娯楽市場の成熟は、探偵小説・怪奇・ユーモアなどのジャンルを強く押し上げた。江戸川乱歩は、都市の匿名性や欲望の暗部を題材にしつつ、読者の読みの快楽（謎解き、スリル）を作品構造の中心に据えた。こうした領域は、純文学中心の批評からは周縁化されがちだったが、読者の実態としては近代小説の重要な一部であり、のちの大衆文学・サブカルチャーの基盤にもなる。
+
+1923年の関東大震災は、都市の物理的破壊とともに、生活感覚や共同体の想像力を揺さぶり、震災表象や都市の再編をめぐる物語を生んだ。復興の過程で娯楽産業とメディアが再配置され、都市生活の速度や消費の感覚がいっそう前景化する。小説は、災厄の記憶を語る装置であると同時に、復興期の新しい日常を記述する装置としても働き、モダニズム的な感性と結びつきやすい条件が整った。
+
+映画、広告、雑誌グラフ、娯楽産業が相互に結びつくと、「流行」が物語の題材と形式を規定する度合いが増した。小説は単独のメディアではなくなり、視覚的・音声的な表現と競合しつつ、逆にそれらを取り込むことで新しい語り口を獲得していく。このメディア横断性は、近代以後の小説が繰り返し直面する条件となる。
+
+### 6. プロレタリア文学と戦時体制：政治と表現のせめぎ合い（1920年代〜45年）
+
+1920年代以降、社会運動の高まりとともに、労働や貧困、階級を正面から扱うプロレタリア文学が展開した。小林多喜二『蟹工船』（1929年）に代表される作品群は、個人の内面だけでなく、集団の経験や制度の暴力を物語化し、小説が社会分析の装置になり得ることを示した。ここでは、写実は「社会の現実」を可視化するための方法として再定義され、読者は文学を通じて同時代の構造を理解することを期待された。
+
+しかし政治的緊張が高まる中で、弾圧や転向が起こり、作家の表現は大きく制約される。運動の衰退は単に外的圧力だけで説明できず、表現の方法論（政治性と芸術性の関係、宣伝と文学の距離）をめぐる内部の対立も含んでいた。ここで露呈したのは、文学が社会に介入しようとするほど、制度と衝突し、同時に文学内部でも正当性の基準が揺れるという構造である。
+
+1930年代後半からの戦時体制下では、出版・言論が統制され、紙不足や検閲、自己検閲が日常化する。国策への協力と抵抗を単純な二分法で語ることは難しく、作家や編集者は、生活の維持、発表の継続、信念の保持の間で複雑な判断を迫られた。結果として、戦争体験は「書けること／書けないこと」の境界を大きく変え、戦後に至るまで語りの条件として残り続ける。
+
+戦後の再評価では、責任論と作品価値の切り分けが繰り返し争点になった。ある作品が制度に絡め取られていたことをどう位置づけるか、また個別の作家の判断をどこまで一般化できるかは、分野史叙述において慎重さを要する。小説史は倫理の問題から逃れられないが、同時に、倫理だけで作品の働きを説明しきれない局面もある。
+
+### 7. 敗戦〜1950年代：「戦後文学」の出発と占領期の制度
+
+1945年の敗戦は、小説にとって主題と制度の両面で断絶をもたらした。占領期には「民主化」が標語となる一方、占領当局による検閲も存在し、表現の自由は新しい形で条件づけられた。戦争をどう語るか、責任をどう引き受けるか、生活の再建をどう描くかが、同時代的な切迫した課題になり、小説は個人の生を通じて社会の崩壊と再建を描く場となる。
+
+太宰治『斜陽』（1947年）『人間失格』（1948年）は、敗戦後の価値の空白と自己否定を強く表象し、「戦後の感情」をめぐる語彙を形作った。一方で、大岡昇平『野火』（1951年）や野間宏『真空地帯』（1952年）のように、戦場や軍隊という制度の内部から戦争体験を描き直す試みもあり、戦争は内面の問題であると同時に、組織と国家の問題として扱われた。被爆、引揚、占領下の生活といった主題も、同時に小説の射程を広げる。
+
+1950年代に入ると、戦争の直接経験から距離のある読者が増える一方で、社会の矛盾を現実的に捉える欲求も強まり、松本清張『点と線』（1957〜58年）など、推理小説の枠組みで制度と生活のリアリズムを描く作品が広い支持を得た。純文学と大衆小説の境界をまたぐ形で、社会派と呼ばれる潮流が注目されるのは、読者が「現実」を求めるとき、その現実の捉え方が一つではないことを示している。戦後小説の多声性は、主題の多様さだけでなく、形式の選択肢の増加としても現れた。
+
+この時期の文壇は、文芸誌、同人誌、出版社の再編とともに再構築される。新人の登場や世代論（「第一の戦後派」「第三の新人」など）が語られ、文学が社会の中心的言説として機能していた時期でもある。評価装置としての雑誌や賞は、作家の発掘と消費を同時に進め、作品が社会的事件として受容される回路を整えた。
+
+ただし「戦後文学」という呼称自体が、何を中心に置くかで意味が変わる点には注意が必要である。戦争責任の追及、生活のリアリズム、政治的コミットメント、内面の救済といった焦点が並立し、単一の流れに還元できない。分野史としては、複数の焦点が同時に競合したこと自体を、戦後の特徴として捉える方が実態に近い。
+
+### 8. 1960〜70年代：純文学の制度化と実験的手法の広がり
+
+高度経済成長期には、生活水準の上昇と大衆消費の拡大が進む一方、60年安保や学生運動など政治的緊張も続き、小説は社会の変化を多層的に受け止める必要に迫られた。安部公房『砂の女』（1962年）は、不条理劇的な設定と寓意を用いて、個人が制度や環境に絡め取られる感覚を描き、戦後のリアリズムとは異なる形で現実を捉える方法を提示した。大江健三郎『個人的な体験』（1964年）は、私的経験と社会的・政治的条件を結びつけ、内面の告白が社会批評と分離できないことを示す。
+
+遠藤周作『沈黙』（1966年）は、宗教と歴史を主題に、翻訳文化や異文化接触の問題を小説内部に組み込み、日本小説が「外部」をどう扱うかという課題を浮かび上がらせた。三島由紀夫『金閣寺』（1956年）は少し前に位置するが、戦後の価値空間で美学と倫理、政治的身振りがどのように絡み合うかを示した例として、この時代の議論に影を落とし続けた。
+
+制度面では、文芸賞が評価装置として定着し、文芸誌を中心とする純文学の回路が強化される。芥川賞・直木賞（1935年創設）をはじめとする賞は、作品を「事件化」し、書店の棚や読者の注意を組織する。一方で、賞が作家の書き方に逆に影響すること（期待されるテーマ、文体、デビュー作の型）も起こり、制度は創作の自由を支えると同時に、見えにくい規範を生む。
+
+1970年代に入ると、政治的対立を正面から描く小説が持っていた中心性は相対化され、都市生活の孤立、家族の変容、消費社会の息苦しさといった主題が、より多様な文体と形式で扱われるようになる。庄司薫『赤頭巾ちゃん気をつけて』（1969年）は会話体や同時代の語感を前面に出し、読者の世代感覚を作品の駆動力に変えた。村上龍『限りなく透明に近いブルー』（1976年）は、暴力や享楽の表象を通じて、戦後的価値の枠組みが揺らぐ局面を示した。こうした多様化は、純文学の内部だけで完結せず、SFや推理小説など周辺ジャンルの活性化とも連動し、小説が担う役割を細分化していく。
+
+テレビを中心とするマスメディアの成長は、作家像の大衆化を進めた。作家は作品だけでなく「人物」として消費され、ベストセラーの生成は、宣伝・映像化・時事性と結びつく。小説は、社会の中心的メディアであり続けながら、同時に他のメディアと競合し、相互依存するようになる。
+
+### 9. 1980〜90年代：ポストモダン化とジャンル横断、社会的事件の影
+
+1980年代以降、小説は高度消費社会と情報環境の変化の中で、語りの前提を更新していく。村上春樹『ノルウェイの森』（1987年）は広い読者層を獲得し、軽やかな語り口、ポップカルチャーの参照、個人の喪失感を結びつけた作品として位置づけられる。ここで重要なのは、文学が「教養」だけで支えられるのではなく、音楽・映画・広告と同じ文化回路の中で読まれる条件が強まったことである。翻訳を通じた国際的流通も視野に入り、小説は国内の文壇だけで完結しない。
+
+吉本ばなな『キッチン』（1988年）は、日常の語彙で喪失や癒やしを語り、90年代以降の感性（家族、ケア、孤独）を先取りしたとされる。ミステリの領域では、宮部みゆき『火車』（1992年）のように、娯楽の枠組みを保ちながら、消費社会の歪みや制度の陰影を描く作品が評価を得た。ジャンル文学が社会批評と接続する回路が強まり、「純文学／大衆文学」の境界は実作の側から揺らいでいく。
+
+また、ミステリ内部でも形式意識の高い潮流が強まり、島田荘司『占星術殺人事件』（1981年）や綾辻行人『十角館の殺人』（1987年）以後に「新本格」と呼ばれる動きが注目を集めた。ここでは、謎解きの快楽と物語構造の自覚が結びつき、読者は作品を「解く」だけでなく「形式として味わう」ことを求める。こうした読者の訓練は、純文学側の実験的手法とも別のルートで呼応し、小説の形式が多様な層で更新される状況を作った。
+
+1995年の阪神・淡路大震災、オウム真理教事件は、共同体、宗教、暴力、メディアの問題を突きつけ、小説に倫理的な問いを再び強く持ち込んだ。災害や事件を「素材」として扱うことの困難さ、当事者性と想像力の距離、記録とフィクションの境界が論点となり、以後の分野史で繰り返し参照される。
+
+批評の側でも、ポストモダン、メディア論、カルチュラル・スタディーズなどが影響力を持ち、文学作品を制度・市場・ジェンダー・表象の政治として読む枠組みが広がった。評価基準は一枚岩ではなくなり、複数の読みが併存すること自体が、現代小説の条件として固定化していく。
+
+### 10. 2000年代以後：デジタル化・グローバル化と読書環境の再構成
+
+2000年代以後の小説史を特徴づけるのは、デジタル環境が作品の生産・流通・受容に直接介入する度合いが増したことである。携帯電話を介した携帯小説は、短い単位での更新、読者コメント、コミュニティ内での拡散といった仕組みに支えられ、従来の出版社中心の回路とは別の「発表の場」を可視化した。続くWeb小説では、投稿サイトを通じて作者と読者が近い距離で往復し、ランキングや推薦が作品の読まれ方を組織する。ここでは編集者による選別に代わり、プラットフォーム上の指標が評価装置として働く。
+
+この回路は、オンライン発の作品が書籍化・コミカライズ・映像化へ展開することで、従来の出版と接続もしていく。編集者の役割が消えたわけではなく、プラットフォーム上の人気をどう作品として整えるか、長編化・シリーズ化の設計をどうするかといった形で再配置される。読者の反応が制作過程に早い段階で介入するため、需要に合わせて形式が最適化されやすい反面、実験や逸脱がどの回路で評価されるかは媒体ごとに差が出やすい。
+
+電子書籍、オーディオブック、SNSの普及は、読書の形式そのものを多様化させた。紙の単行本や文庫だけでなく、スマートフォンでの断片的読書、音声での聴取、SNS上での引用や感想の連鎖が作品の寿命を変える。作家は作品外の発信も含めて読者と接点を持ち、炎上や誤読への対応も創作環境の一部になる。こうした条件は、表現の自由を拡張する面と、同時に新しい自己検閲を生む面を併せ持つ。
+
+デジタル化は批評と推薦の形も変えた。紙の文芸誌や新聞批評に加え、ブログ、動画、ポッドキャスト、SNSのスレッドが評価の場となり、読者が集合知として「次に読むべき本」を作る。推薦アルゴリズムは可視性を偏らせやすく、同じ作品が特定のコミュニティ内で過剰に循環することもある。結果として、作品が長期的に読まれるかどうかは、内容だけでなく、プラットフォームの設計や話題の持続性に左右される度合いが増している。
+
+出版構造の変化も深い。雑誌の影響力低下、書店数の減少、物流や返品制度の問題は、作品が「どこで発見されるか」を変え、ベストセラーの作られ方を再編する。文芸賞や文芸誌は依然として重要だが、それだけでは読者への到達を保証しない。結果として、映像化、漫画化、海外展開、SNS発の話題化など、複数の回路が並走する状況が常態化する。
+
+国際的評価の回路では、川端康成のノーベル文学賞受賞（1968年）、大江健三郎（1994年）以後も、翻訳出版や海外賞、国際ブックフェアなどを通じて「日本小説像」が外部から再構成される。海外で読まれる作品は、国内の評価軸とは別の期待（歴史性、異文化性、普遍性）にさらされ、作者側もそれを意識して自己説明を行うようになる。グローバル化は、作品の可能性を広げると同時に、「代表」や「日本らしさ」をめぐる固定観念と交渉する負担も増やす。
+
+分野史を叙述する上では、カノン形成の偏り（誰が記憶され、誰が忘れられるか）、編集者・雑誌アーカイブの役割、統計や計量的手法による市場・読者分析の有効性と限界が論点になる。データは傾向を示すが、作品の価値や読書経験の質をそのまま置き換えるものではない。近代以後の小説史は、作品と制度、技法と市場、国内と海外、紙とデジタルが、繰り返し結び替えられてきた歴史として記述されるべきである。
