291／297-各国・各地域の地理・地誌・紀行.md の小分類を修正

--- a/29-地理．地誌．紀行/291／297-各国・各地域の地理・地誌・紀行/291／297-各国・各地域の地理・地誌・紀行.md
+++ b/29-地理．地誌．紀行/291／297-各国・各地域の地理・地誌・紀行/291／297-各国・各地域の地理・地誌・紀行.md
@@ -3,18 +3,10 @@
 ## 小分類
 
 - 291-＠日本
-- 291-＠日本
-- 292-＠アジア
 - 292-＠アジア
 - 293-＠ヨーロッパ
-- 293-＠ヨーロッパ
-- 294-＠アフリカ
-- 294-＠アフリカ
-- 295-＠北アメリカ
-- 295-＠北アメリカ
-- 296-＠南アメリカ
-- 296-＠南アメリカ
-- 297-＠オセアニア．＠両極地方
+- 294-アフリカ
+- 295/296-アメリカ大陸
 - 297-＠オセアニア．＠両極地方
 
 ## 分野の歴史
